crates/koruma-derive/src/tests/snapshots/koruma_derive__tests__snapshot_tests__validator_expansion_generic.snap
---
source: crates/koruma-derive/src/tests/snapshot_tests/validator.rs
expression: pretty_print(expanded)
---
#[derive(Clone, Debug)]
pub struct GenericRangeValidation<T> {
    pub min: T,
    pub max: T,
    actual: Option<T>,
}
#[doc(hidden)]
pub mod generic_range_validation_builder {
    pub struct Empty;
    pub struct Set;
}
pub struct GenericRangeValidationBuilder<
    T,
    __KorumaMinState,
    __KorumaMaxState,
    __KorumaActualState,
> {
    min: ::std::option::Option<T>,
    max: ::std::option::Option<T>,
    actual: ::std::option::Option<Option<T>>,
    _state: ::std::marker::PhantomData<
        (__KorumaMinState, __KorumaMaxState, __KorumaActualState),
    >,
}
impl<
    T,
    __KorumaMinState,
    __KorumaMaxState,
    __KorumaActualState,
> GenericRangeValidationBuilder<
    T,
    __KorumaMinState,
    __KorumaMaxState,
    __KorumaActualState,
> {
    fn new() -> Self {
        Self {
            min: ::std::option::Option::None,
            max: ::std::option::Option::None,
            actual: ::std::option::Option::None,
            _state: ::std::marker::PhantomData,
        }
    }
    pub fn min(
        self,
        value: T,
    ) -> GenericRangeValidationBuilder<
        T,
        generic_range_validation_builder::Set,
        __KorumaMaxState,
        __KorumaActualState,
    > {
        GenericRangeValidationBuilder {
            min: ::std::option::Option::Some(value),
            max: self.max,
            actual: self.actual,
            _state: ::std::marker::PhantomData,
        }
    }
    pub fn max(
        self,
        value: T,
    ) -> GenericRangeValidationBuilder<
        T,
        __KorumaMinState,
        generic_range_validation_builder::Set,
        __KorumaActualState,
    > {
        GenericRangeValidationBuilder {
            min: self.min,
            max: ::std::option::Option::Some(value),
            actual: self.actual,
            _state: ::std::marker::PhantomData,
        }
    }
    #[doc(hidden)]
    pub fn with_value(
        self,
        value: T,
    ) -> GenericRangeValidationBuilder<
        T,
        __KorumaMinState,
        __KorumaMaxState,
        generic_range_validation_builder::Set,
    > {
        GenericRangeValidationBuilder {
            min: self.min,
            max: self.max,
            actual: ::std::option::Option::Some(::std::option::Option::Some(value)),
            _state: ::std::marker::PhantomData,
        }
    }
}
impl<
    T,
> GenericRangeValidationBuilder<
    T,
    generic_range_validation_builder::Set,
    generic_range_validation_builder::Set,
    generic_range_validation_builder::Set,
> {
    pub fn build(self) -> GenericRangeValidation<T> {
        GenericRangeValidation {
            min: self
                .min
                .expect("required koruma validator builder field should be set"),
            max: self
                .max
                .expect("required koruma validator builder field should be set"),
            actual: self
                .actual
                .expect("required koruma validator builder field should be set"),
        }
    }
}
impl<T> ::koruma::__private::BuildValidator
for GenericRangeValidationBuilder<
    T,
    generic_range_validation_builder::Set,
    generic_range_validation_builder::Set,
    generic_range_validation_builder::Set,
> {
    type Validator = GenericRangeValidation<T>;
    fn build_validator(self) -> Self::Validator {
        self.build()
    }
}
impl<
    T,
    __KorumaMinState,
    __KorumaMaxState,
    __KorumaActualState,
> ::koruma::__private::CaptureValueRef<T>
for GenericRangeValidationBuilder<
    T,
    __KorumaMinState,
    __KorumaMaxState,
    __KorumaActualState,
>
where
    T: ::koruma::__private::CapturedInputCanBeCloned,
    GenericRangeValidationBuilder<
        T,
        __KorumaMinState,
        __KorumaMaxState,
        generic_range_validation_builder::Set,
    >: ::koruma::__private::BuildValidator,
{
    type Output = GenericRangeValidationBuilder<
        T,
        __KorumaMinState,
        __KorumaMaxState,
        generic_range_validation_builder::Set,
    >;
    fn capture_value_ref(self, value: &T) -> Self::Output {
        self.with_value(value.clone())
    }
}
impl<T> GenericRangeValidation<T> {
    #[doc(hidden)]
    pub fn __koruma_builder() -> GenericRangeValidationBuilder<
        T,
        generic_range_validation_builder::Empty,
        generic_range_validation_builder::Empty,
        generic_range_validation_builder::Empty,
    > {
        GenericRangeValidationBuilder::new()
    }
    #[doc = concat!(
        "Starts building [`", stringify!(GenericRangeValidation), "`] with the `",
        "actual", "` value set."
    )]
    pub fn with_value(
        value: T,
    ) -> GenericRangeValidationBuilder<
        T,
        generic_range_validation_builder::Empty,
        generic_range_validation_builder::Empty,
        generic_range_validation_builder::Set,
    > {
        Self::__koruma_builder().with_value(value)
    }
    #[doc = concat!(
        "Returns the stored `", "actual", "` value captured during validation."
    )]
    pub fn actual(&self) -> &Option<T> {
        &self.actual
    }
    #[doc = concat!("Starts building this validator with `", "min", "` set.")]
    pub fn min(
        value: T,
    ) -> GenericRangeValidationBuilder<
        T,
        generic_range_validation_builder::Set,
        generic_range_validation_builder::Empty,
        generic_range_validation_builder::Empty,
    > {
        Self::__koruma_builder().min(value)
    }
    #[doc = concat!("Starts building this validator with `", "max", "` set.")]
    pub fn max(
        value: T,
    ) -> GenericRangeValidationBuilder<
        T,
        generic_range_validation_builder::Empty,
        generic_range_validation_builder::Set,
        generic_range_validation_builder::Empty,
    > {
        Self::__koruma_builder().max(value)
    }
}
impl<T> ::koruma::ValidatorMetadata<T> for GenericRangeValidation<T> {
    fn validator_descriptor() -> ::koruma::ValidatorDescriptor {
        const __KORUMA_PARAMS: &[::koruma::ValidatorParamDescriptor] = &[
            ::koruma::ValidatorParamDescriptor::new("min", "T", true),
            ::koruma::ValidatorParamDescriptor::new("max", "T", true),
        ];
        ::koruma::ValidatorDescriptor::new(
            ::core::any::type_name::<Self>(),
            __KORUMA_PARAMS,
        )
    }
    fn validator_params(&self) -> ::std::vec::Vec<::koruma::ValidatorParam> {
        ::std::vec![
            ::koruma::ValidatorParam::new("min", ::koruma::ValidatorParamValue::opaque(&
            self.min)), ::koruma::ValidatorParam::new("max",
            ::koruma::ValidatorParamValue::opaque(& self.max))
        ]
    }
}
