crates/koruma-derive/src/tests/snapshots/koruma_derive__tests__snapshot_tests__validator_expansion_non_option_value.snap
---
source: crates/koruma-derive/src/tests/snapshot_tests/validator.rs
expression: pretty_print(expanded)
---
#[derive(Clone, Debug)]
pub struct DirectValueValidation {
    min: i32,
    actual: i32,
}
#[doc(hidden)]
pub mod direct_value_validation_builder {
    pub struct Empty;
    pub struct Set;
}
pub struct DirectValueValidationBuilder<__KorumaMinState, __KorumaActualState> {
    min: ::std::option::Option<i32>,
    actual: ::std::option::Option<i32>,
    _state: ::std::marker::PhantomData<(__KorumaMinState, __KorumaActualState)>,
}
impl<
    __KorumaMinState,
    __KorumaActualState,
> DirectValueValidationBuilder<__KorumaMinState, __KorumaActualState> {
    fn new() -> Self {
        Self {
            min: ::std::option::Option::None,
            actual: ::std::option::Option::None,
            _state: ::std::marker::PhantomData,
        }
    }
    pub fn min(
        self,
        value: i32,
    ) -> DirectValueValidationBuilder<
        direct_value_validation_builder::Set,
        __KorumaActualState,
    > {
        DirectValueValidationBuilder {
            min: ::std::option::Option::Some(value),
            actual: self.actual,
            _state: ::std::marker::PhantomData,
        }
    }
    #[doc(hidden)]
    pub fn with_value(
        self,
        value: i32,
    ) -> DirectValueValidationBuilder<
        __KorumaMinState,
        direct_value_validation_builder::Set,
    > {
        DirectValueValidationBuilder {
            min: self.min,
            actual: ::std::option::Option::Some(value),
            _state: ::std::marker::PhantomData,
        }
    }
}
impl DirectValueValidationBuilder<
    direct_value_validation_builder::Set,
    direct_value_validation_builder::Set,
> {
    pub fn build(self) -> DirectValueValidation {
        DirectValueValidation {
            min: self
                .min
                .expect("required koruma validator builder field should be set"),
            actual: self
                .actual
                .expect("required koruma validator builder field should be set"),
        }
    }
}
impl ::koruma::__private::BuildValidator
for DirectValueValidationBuilder<
    direct_value_validation_builder::Set,
    direct_value_validation_builder::Set,
> {
    type Validator = DirectValueValidation;
    fn build_validator(self) -> Self::Validator {
        self.build()
    }
}
impl<__KorumaMinState, __KorumaActualState> ::koruma::__private::CaptureValueRef<i32>
for DirectValueValidationBuilder<__KorumaMinState, __KorumaActualState>
where
    i32: ::koruma::__private::CapturedInputCanBeCloned,
    DirectValueValidationBuilder<
        __KorumaMinState,
        direct_value_validation_builder::Set,
    >: ::koruma::__private::BuildValidator,
{
    type Output = DirectValueValidationBuilder<
        __KorumaMinState,
        direct_value_validation_builder::Set,
    >;
    fn capture_value_ref(self, value: &i32) -> Self::Output {
        self.with_value(value.clone())
    }
}
impl DirectValueValidation {
    #[doc(hidden)]
    pub fn __koruma_builder() -> DirectValueValidationBuilder<
        direct_value_validation_builder::Empty,
        direct_value_validation_builder::Empty,
    > {
        DirectValueValidationBuilder::new()
    }
    #[doc = concat!(
        "Starts building [`", stringify!(DirectValueValidation), "`] with the `",
        "actual", "` value set."
    )]
    pub fn with_value(
        value: i32,
    ) -> DirectValueValidationBuilder<
        direct_value_validation_builder::Empty,
        direct_value_validation_builder::Set,
    > {
        Self::__koruma_builder().with_value(value)
    }
    #[doc = concat!(
        "Returns the stored `", "actual", "` value captured during validation."
    )]
    pub fn actual(&self) -> &i32 {
        &self.actual
    }
    #[doc = concat!("Starts building this validator with `", "min", "` set.")]
    pub fn min(
        value: i32,
    ) -> DirectValueValidationBuilder<
        direct_value_validation_builder::Set,
        direct_value_validation_builder::Empty,
    > {
        Self::__koruma_builder().min(value)
    }
}
impl ::koruma::ValidatorMetadata<i32> for DirectValueValidation {
    fn validator_descriptor() -> ::koruma::ValidatorDescriptor {
        const __KORUMA_PARAMS: &[::koruma::ValidatorParamDescriptor] = &[
            ::koruma::ValidatorParamDescriptor::new("min", "i32", true),
        ];
        ::koruma::ValidatorDescriptor::new(
            ::core::any::type_name::<Self>(),
            __KORUMA_PARAMS,
        )
    }
    fn validator_params(&self) -> ::std::vec::Vec<::koruma::ValidatorParam> {
        ::std::vec![
            ::koruma::ValidatorParam::new("min", ::koruma::ValidatorParamValue::I64(self
            .min as i64))
        ]
    }
}
