crates/koruma-derive/src/tests/snapshots/koruma_derive__tests__snapshot_tests__validator_expansion_simple.snap
---
source: crates/koruma-derive/src/tests/snapshot_tests/validator.rs
expression: pretty_print(expanded)
---
#[derive(Clone, Debug)]
pub struct NumberRangeValidation {
    min: i32,
    max: i32,
    actual: Option<i32>,
}
#[doc(hidden)]
pub mod number_range_validation_builder {
    pub struct Empty;
    pub struct Set;
}
pub struct NumberRangeValidationBuilder<
    __KorumaMinState,
    __KorumaMaxState,
    __KorumaActualState,
> {
    min: ::std::option::Option<i32>,
    max: ::std::option::Option<i32>,
    actual: ::std::option::Option<Option<i32>>,
    _state: ::std::marker::PhantomData<
        (__KorumaMinState, __KorumaMaxState, __KorumaActualState),
    >,
}
impl<
    __KorumaMinState,
    __KorumaMaxState,
    __KorumaActualState,
> NumberRangeValidationBuilder<__KorumaMinState, __KorumaMaxState, __KorumaActualState> {
    fn new() -> Self {
        Self {
            min: ::std::option::Option::None,
            max: ::std::option::Option::None,
            actual: ::std::option::Option::None,
            _state: ::std::marker::PhantomData,
        }
    }
    pub fn min(
        self,
        value: i32,
    ) -> NumberRangeValidationBuilder<
        number_range_validation_builder::Set,
        __KorumaMaxState,
        __KorumaActualState,
    > {
        NumberRangeValidationBuilder {
            min: ::std::option::Option::Some(value),
            max: self.max,
            actual: self.actual,
            _state: ::std::marker::PhantomData,
        }
    }
    pub fn max(
        self,
        value: i32,
    ) -> NumberRangeValidationBuilder<
        __KorumaMinState,
        number_range_validation_builder::Set,
        __KorumaActualState,
    > {
        NumberRangeValidationBuilder {
            min: self.min,
            max: ::std::option::Option::Some(value),
            actual: self.actual,
            _state: ::std::marker::PhantomData,
        }
    }
    #[doc(hidden)]
    pub fn with_value(
        self,
        value: i32,
    ) -> NumberRangeValidationBuilder<
        __KorumaMinState,
        __KorumaMaxState,
        number_range_validation_builder::Set,
    > {
        NumberRangeValidationBuilder {
            min: self.min,
            max: self.max,
            actual: ::std::option::Option::Some(::std::option::Option::Some(value)),
            _state: ::std::marker::PhantomData,
        }
    }
}
impl NumberRangeValidationBuilder<
    number_range_validation_builder::Set,
    number_range_validation_builder::Set,
    number_range_validation_builder::Set,
> {
    pub fn build(self) -> NumberRangeValidation {
        NumberRangeValidation {
            min: self
                .min
                .expect("required koruma validator builder field should be set"),
            max: self
                .max
                .expect("required koruma validator builder field should be set"),
            actual: self
                .actual
                .expect("required koruma validator builder field should be set"),
        }
    }
}
impl ::koruma::__private::BuildValidator
for NumberRangeValidationBuilder<
    number_range_validation_builder::Set,
    number_range_validation_builder::Set,
    number_range_validation_builder::Set,
> {
    type Validator = NumberRangeValidation;
    fn build_validator(self) -> Self::Validator {
        self.build()
    }
}
impl<
    __KorumaMinState,
    __KorumaMaxState,
    __KorumaActualState,
> ::koruma::__private::CaptureValueRef<i32>
for NumberRangeValidationBuilder<__KorumaMinState, __KorumaMaxState, __KorumaActualState>
where
    i32: ::koruma::__private::CapturedInputCanBeCloned,
    NumberRangeValidationBuilder<
        __KorumaMinState,
        __KorumaMaxState,
        number_range_validation_builder::Set,
    >: ::koruma::__private::BuildValidator,
{
    type Output = NumberRangeValidationBuilder<
        __KorumaMinState,
        __KorumaMaxState,
        number_range_validation_builder::Set,
    >;
    fn capture_value_ref(self, value: &i32) -> Self::Output {
        self.with_value(value.clone())
    }
}
impl NumberRangeValidation {
    #[doc(hidden)]
    pub fn __koruma_builder() -> NumberRangeValidationBuilder<
        number_range_validation_builder::Empty,
        number_range_validation_builder::Empty,
        number_range_validation_builder::Empty,
    > {
        NumberRangeValidationBuilder::new()
    }
    #[doc = concat!(
        "Starts building [`", stringify!(NumberRangeValidation), "`] with the `",
        "actual", "` value set."
    )]
    pub fn with_value(
        value: i32,
    ) -> NumberRangeValidationBuilder<
        number_range_validation_builder::Empty,
        number_range_validation_builder::Empty,
        number_range_validation_builder::Set,
    > {
        Self::__koruma_builder().with_value(value)
    }
    #[doc = concat!(
        "Returns the stored `", "actual", "` value captured during validation."
    )]
    pub fn actual(&self) -> &Option<i32> {
        &self.actual
    }
    #[doc = concat!("Starts building this validator with `", "min", "` set.")]
    pub fn min(
        value: i32,
    ) -> NumberRangeValidationBuilder<
        number_range_validation_builder::Set,
        number_range_validation_builder::Empty,
        number_range_validation_builder::Empty,
    > {
        Self::__koruma_builder().min(value)
    }
    #[doc = concat!("Starts building this validator with `", "max", "` set.")]
    pub fn max(
        value: i32,
    ) -> NumberRangeValidationBuilder<
        number_range_validation_builder::Empty,
        number_range_validation_builder::Set,
        number_range_validation_builder::Empty,
    > {
        Self::__koruma_builder().max(value)
    }
}
impl ::koruma::ValidatorMetadata<i32> for NumberRangeValidation {
    fn validator_descriptor() -> ::koruma::ValidatorDescriptor {
        const __KORUMA_PARAMS: &[::koruma::ValidatorParamDescriptor] = &[
            ::koruma::ValidatorParamDescriptor::new("min", "i32", true),
            ::koruma::ValidatorParamDescriptor::new("max", "i32", true),
        ];
        ::koruma::ValidatorDescriptor::new(
            ::core::any::type_name::<Self>(),
            __KORUMA_PARAMS,
        )
    }
    fn validator_params(&self) -> ::std::vec::Vec<::koruma::ValidatorParam> {
        ::std::vec![
            ::koruma::ValidatorParam::new("min", ::koruma::ValidatorParamValue::I64(self
            .min as i64)), ::koruma::ValidatorParam::new("max",
            ::koruma::ValidatorParamValue::I64(self.max as i64))
        ]
    }
}
