crates/koruma-derive/src/tests/snapshots/koruma_derive__tests__snapshot_tests__validator_expansion_skip_capture.snap
---
source: crates/koruma-derive/src/tests/snapshot_tests.rs
expression: pretty_print(expanded)
---
#[derive(::renamed_koruma::bon::Builder)]
#[builder(
    crate = ::renamed_koruma::bon,
    start_fn(name = __koruma_bon_builder, vis = "")
)]
#[derive(Clone, Debug)]
pub struct PresenceOnlyValidation<T> {
    actual: Option<T>,
}
impl<T> PresenceOnlyValidation<T> {
    #[doc(hidden)]
    pub fn __koruma_builder() -> PresenceOnlyValidationBuilder<
        T,
        presence_only_validation_builder::Empty,
    > {
        Self::__koruma_bon_builder()
    }
    #[doc = concat!(
        "Starts building [`", stringify!(PresenceOnlyValidation), "`] with the `",
        "actual", "` value set."
    )]
    pub fn with_value(
        value: T,
    ) -> PresenceOnlyValidationBuilder<
        T,
        presence_only_validation_builder::SetActual<
            presence_only_validation_builder::Empty,
        >,
    > {
        Self::__koruma_builder().with_value(value)
    }
    #[doc = concat!(
        "Returns the stored `", "actual", "` value captured by `#[koruma(value)]`."
    )]
    pub fn actual(&self) -> &Option<T> {
        &self.actual
    }
}
impl<T, S: presence_only_validation_builder::State> PresenceOnlyValidationBuilder<T, S>
where
    S::Actual: ::renamed_koruma::bon::IsUnset,
{
    /// Sets the value field. This is auto-generated by `#[koruma::validator]`.
    pub fn with_value(
        self,
        value: T,
    ) -> PresenceOnlyValidationBuilder<
        T,
        presence_only_validation_builder::SetActual<S>,
    > {
        self.actual(value)
    }
}
impl<
    T,
    S: presence_only_validation_builder::State,
> ::renamed_koruma::BuilderWithValueRef<T> for PresenceOnlyValidationBuilder<T, S>
where
    S::Actual: ::renamed_koruma::bon::IsUnset,
{
    type Output = Self;
    fn with_value_ref(self, _value: &T) -> Self::Output {
        self
    }
}
